--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -45,4 +45,4 @@ jobs:
           git config --global user.name "Ricky14095"
           git config --global user.email "2300032743@kluniversity.in"
           npm install -g gh-pages
-          gh-pages -d dist -r https://x-access-token:${GITHUB_TOKEN}@github.com/balajee-rm/S109.git
+          gh-pages -d dist -r https://x-access-token:${GITHUB_TOKEN}@github.com/Ricky14095/S109.git
