--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://github.com/Ricky14095/S109",
+  "homepage": "https://Ricky14095.github.io/S109"
   "scripts": {
     "dev": "vite",
     "build": "vite build",
